Update from May 14, 2021

--- a/65337-h/65337-h.htm
+++ b/65337-h/65337-h.htm
@@ -193,7 +193,7 @@ img.w100 {width: 100%;}
   </head>
 <body>
 
-<div style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of The Age of Justinian and Theodora, Volume 1 (of 2), by William Gordon Holmes</div>
+<div style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of The Age of Justinian and Theodora, by William Gordon Holmes</div>
 
 <div style='display:block; margin:1em 0'>
 This eBook is for the use of anyone anywhere in the United States and
@@ -206,13 +206,13 @@ country where you are located before using this eBook.
 </div>
 
 <table style='min-width:0; padding:0; margin-left:0; border-collapse:collapse'>
-  <tr><td>Title:</td><td>The Age of Justinian and Theodora, Volume 1 (of 2)</td></tr>
+  <tr><td>Title:</td><td>The Age of Justinian and Theodora</td></tr>
   <tr><td></td><td>A History of the Sixth Century A.D.</td></tr>
 </table>
 
 <div style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Author: William Gordon Holmes</div>
 
-<div style='display:block; margin:1em 0'>Release Date: May 16, 2021 [eBook #65337]</div>
+<div style='display:block; margin:1em 0'>Release Date: May 14, 2021 [eBook #65337]</div>
 
 <div style='display:block; margin:1em 0'>Language: English</div>
 
@@ -220,7 +220,7 @@ country where you are located before using this eBook.
 
 <div style='display:block; margin-left:2em; text-indent:-2em'>Produced by: Turgut Dincer, Les Galloway and the Online Distributed Proofreading Team at https://www.pgdp.net (This file was produced from images generously made available by The Internet Archive)</div>
 
-<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK THE AGE OF JUSTINIAN AND THEODORA, VOLUME 1 (OF 2) ***</div>
+<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK THE AGE OF JUSTINIAN AND THEODORA ***</div>
 
 <div class="transnote">
 <h3>Transcriber’s Notes</h3>
@@ -20494,7 +20494,7 @@ Procopius and do not come to light noticeably in the ordinary chronographers.</p
 </div>
 
 
-<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK THE AGE OF JUSTINIAN AND THEODORA, VOLUME 1 (OF 2) ***</div>
+<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK THE AGE OF JUSTINIAN AND THEODORA ***</div>
 <div style='text-align:left'>
 
 <div style='display:block; margin:1em 0'>
